testsuite/tests/rename/should_compile/T11164b.hs
{-# LANGUAGE TypeFamilies #-}
module T11164b where

import T11164a

data instance T Int = MkT
