testsuite/tests/rename/should_fail/T25899e_helper.hs
{-# LANGUAGE TypeData #-}
{-# LANGUAGE ExplicitNamespaces #-}

module T25899e_helper where

type data T = MkT
